# argus

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
LeapProject/: .gitignore  README.md  UpgradeLog.htm  leap_demo.py  leap_env.x86_64  requirements.txt
LeapProject/Assets/: AgentCallback.cs  leap_scene.unity  lookAtOrigin.cs
LeapProject/Assets/ImageSynthesis/: ImageSynthesis.cs
LeapProject/Assets/Scenes/: SampleScene.unity
LeapProject/Assets/leap_scene/: LightingData.asset  ReflectionProbe-1.exr  ReflectionProbe-2.exr
LeapProject/ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
LeapProject/UserSettings/: EditorUserSettings.asset
LeapProject/leap_env_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
argus/: data.py  data_generation.py  models.py  train.py  utils.py  validate.py  validate_real.py  warp2.py  warp3.py  warp_utils.py
argus_depth/leapargus_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
leapargus_rgb/leapargus_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
scripts/: mesh_conversion.py  mujoco_rendering.py  rotation_overfitting.py  timing.py  train_model.py
tests/: conftest.py  test_data.py  test_data_generation.py  test_model.py  test_train.py  test_utils.py
(+1355 files in other folders)
