[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.0.1"
description = "Cube pose estimation tool for the in-hand manipulation setup in the AMBER Lab."
readme = "README.md"
license = {text="Apache 2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dependencies = [
    "h5py>=3.11.0",
    "kornia>=0.7.2",
    "matplotlib>=3.5.2",
    "mlagents==1.0.0",
    "numpy>=1.21.2",
    "pypose>=0.6.7",
    "torch>=2.0.0",
    "torchvision>=0.15.2",
    "tqdm>=4.66.4",
    "tyro>=0.8.4",
    "wandb>=0.17.0",
]

[project.optional-dependencies]
# development-only dependencies
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.2",
    "pytest>=7.0.0",
]

[options]
dependency_links = [
    "https://download.pytorch.org/whl/cu121",
]

[tool.black]
line-length = 120

[tool.setuptools.packages.find]
include = ["argus"]